k8s/deployment.yml
# This is a deployment for the expediente service backend in Kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expediente-service
  labels:                       # Set of labels attached to the Deployment
    app: expdiente-service      # This Deployment is labeled with "app=pref-service"
spec:
  replicas: 1
  selector:                    # Defines the labels used to select the Pods to be scaled
    matchLabels:
      app: expediente-service
  template:                   # The template for creating a Pod
    metadata:
      labels:                 # Labels attached to the Pod object. They should match the ones used as selectors.
        app: expediente-service
    spec:
      containers:                     # The list of containers in the Pod (one in this case)
        - name: expdiente-service     # The name of the Pod
          image: docker.io/ailegorreta/expediente-service    # The image used to run the container. No tag is defined, so “latest” will be used implicitly.
          imagePullPolicy: IfNotPresent # Instructs Kubernetes to pull the image from a container registry only if it’s not present locally yet
          lifecycle:                    # Makes Kubernetes wait 5 seconds before sending the SIGTERM signal to the Pod
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8521   # The ports exposed by the container
