k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: expediente-service
  labels:
    app: expediente-service
spec:
  type: ClusterIP
  selector:
    app: expediente-service # The label used to match the Pods to target and expose
  ports:
    - protocol: TCP
      port: 80            # The port exposed by the Service
      targetPort: 8521    # The port exposed by the Pods targeted by the Service
